<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bilangan">

<android.support.v4.widget.NestedScrollView

    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/note"
          android:textSize="15sp"
          />
<Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/spin_item"
android:layout_marginBottom="10dp"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bilangan_prima"
        android:textSize="16sp"
        android:visibility="gone"
        android:id="@+id/label_bil_prima"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Silahkan masukkan nilai awal yang di inginkan :"
        android:visibility="gone"
        android:id="@+id/label_nilai_awal"
        />
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint"
    android:id="@+id/edt_nilai_awal"
        android:visibility="gone"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Silahkan masukkan nilai akhir yang di inginkan :"
            android:visibility="gone"
            android:id="@+id/label_nilai_akhir"
            tools:ignore="HardcodedText" />
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint"
    android:id="@+id/edt_nilai_akhir"
        android:visibility="gone"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hasil"
    android:id="@+id/hasil_bil_prima"
    android:layout_marginBottom="10dp"
    android:visibility="gone"

    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bilangan_genap"
        android:textSize="16sp"
        android:visibility="gone"
        android:id="@+id/label_bil_genap"

        />

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint"
    android:id="@+id/edt_bil_genap"
        android:visibility="gone"

    />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hasil"
    android:id="@+id/hasil_bil_genap"
    android:visibility="gone"
    android:layout_marginBottom="10dp"

    />

   <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bilangan_ganjil"
        android:textSize="16sp"
        android:visibility="gone"
        android:id="@+id/label_bil_ganjil"

        />

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint"
    android:id="@+id/edt_bil_ganjil"
        android:visibility="gone"

        />

        <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hasil"
    android:id="@+id/hasil_bil_ganjil"
    android:visibility="gone"
            android:layout_marginBottom="10dp"

    />

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btn_submit"
    android:text="@string/submit"
    android:textAllCaps="false"
    android:background="@color/colorAccent"
    android:textColor="#fff"

       />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
</FrameLayout>